--- a/index.html
+++ b/index.html
@@ -1,226 +1,122 @@
-<!doctype html>
-<html lang="en">
+    
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>TravelX-website</title>
-</head>
+
+<html>
+
+<head><title>www.Malik Mohammad Kashif.com   </title>   </head>
 
 <body>
-  <!-- navbar setup -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent ">
-    <div class="container">
-      <a class="navbar-brand t-1" href="#">
-        <i class="fas fa-map-marker-alt fa-1x"></i> Tra<span class="x">velX</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href=#pricing>Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link btn btn-1" href="#contact">Contact Us</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Header section  -->
-  <div id="home" class="header">
-    <div class="d-flex justify-content-center align-items-center flex-column text-area">
-      <h1 class="display-3">TravelX</h1>
-      <h1 class="display-3">The new Adventure</h1>
-      <p class="lead text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic impedit modi quasi.</p>
-      <button class="btn btn-1">Book Now</button>
-    </div>
-  </div>
-  <!-- Our Best Services section -->
-  <section id="about" class="services">
-    <div class="container text-center">
-      <h1 class="mt-5 mb-5">Our Best Services</h1>
-      <div class="row">
-        <div class="col-lg-4">
-          <i class="fas fa-umbrella-beach fa-5x"></i>
-          <h1>Amazing Travel</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eveniet, saepe odio
-            quidem vitae in expedita?</p>
-        </div>
-        <div class="col-lg-4">
-          <i class="fas fa-route fa-5x"></i>
-          <h1>Best Location</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eveniet, saepe odio
-            quidem vitae in expedita?</p>
-        </div>
-        <div class="col-lg-4">
-          <i class="fas fa-headset fa-5x"></i>
-          <h1>24X7 Support</h1>
-          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos eveniet, saepe odio
-            quidem vitae in expedita?</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Book now and Get 50% off section -->
-  <section id="pricing" class="image-hero">
-    <div class="overlay d-flex flex-column align-items-center justify-content-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <h1 class="display-3 text-white">Book now and Get 50% off</h1>
-            <p class="about-p lead text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint officiis
-              fuga vero. Aut cupiditate sapiente eveniet officiis ratione dignissimos tempora!</p>
-          </div>
-          <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-            <button class="btn btn-info">Read More</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- About TravelX section -->
-  <section class="mt-5 mb-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/about1.jpg" class="d-block w-100 caro-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/about2.jpg" class="d-block w-100 caro-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/about3.jpg" class="d-block w-100 caro-img" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="./img/about4.jpg" class="d-block w-100 caro-img" alt="...">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <h1>About TravelX</h1>
-          <p class="lead mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatum explicabo quod
-            praesentium molestiae itaque aspernatur fuga maxime aut voluptatem iusto suscipit ad ducimus dolore sunt,
-            temporibus dolor sapiente tempora.</p>
-          <button class="btn btn-1">Read More</button>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Most popular place section -->
-  <section>
-    <div class="container">
-      <h1 class="mb-5 mt-5 text-center">Most popular places</h1>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">Poland</h2>
-            <img src="./img/Poland.jpg" alt="" class="img-card">
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">India</h2>
-            <img src="./img/India.jpg" alt="" class="img-card">
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">Switzerland</h2>
-            <img src="./img/Switzerland.jpg" alt="" class="img-card">
-          </div>
-        </div>
-      </div>
-      <div class="row mt-3 mb-5">
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">London</h2>
-            <img src="./img/London.jpg" alt="" class="img-card">
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">New York</h2>
-            <img src="./img/NewYork.jpg" alt="" class="img-card">
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card">
-            <h2 class="c-1 overlay-c">Paris</h2>
-            <img src="./img/Paris.jpg" alt="" class="img-card">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Tips on Travel section -->
-  <section class="tips">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1>Tips on Travel</h1>
-          <p class="mt-3 lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint quibusdam doloremque odit aperiam aliquid earum molestias dignissimos labore! Nesciunt laboriosam distinctio sunt alias vitae, aspernatur id facere, quam molestiae et quos. Doloremque a consequatur quam sapiente ad.</p>
-          <button class="btn btn-1">Read More</button>
-        </div>
-        <div class="col-md-6">
-          <img src="./img/trveltips.jpg" class="img-n" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Contact us section -->
-  <section id="contact">
-    <div class="container">
-      <h1 class="text-center">Contact Us</h1>
-      <form class="d-flex justify-content-center align-items-center flex-column">
-        <div class="mb-3">
-          <label class="form-label">Name</label>
-          <input type="text" class="form-control input" placeholder="Name">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Email address</label>
-          <input type="email" class="form-control input" placeholder="name@example.com">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Your message</label>
-          <input type="text" class="form-control input" placeholder="Write your message">
-        </div>
-        <button class="btn-2 mb-3">Submit</button>
-      </form>
-    </div>
-  </section>
-  <!-- footer section -->
-  <section>
-    <footer>
-      <h1>Tra<span class="x">velX</span></h1>
-      <p>Copyright &copy;All rights reserved! #2021</p>
-    </footer>
-  </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+
+<center><h1>MALIK MOHAMMAD KASHIF(computer oprater programing & assistant)</h1></center>
+<center style="color:BLUE;"<H1>ATTENDED KHAIR TECHNICAL CENTER I.T.I Domaryaganj siddharth NagEr U.P pin272189 </H1></center>
+<H1>ABOUT&nbsp ME</H1>
+<H2>ADDRESS </H2>.
+<H2>
+
+	
+     <P1>VILLAGE :&nbsp&nbsp&nbsp &nbsp&nbsp&nbspJAMAL JOTE<p style="color:BLUE;" </P1> 
+     <P>POST:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbspDOMARYAGANJ</P>
+     <P>DIST:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbspSIDDHARTH NAGER</P>
+     <P>PIN:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp272189</P>
+     <P>PHONENO :&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp7394053522</P>
+
+<H2style="color:RED;>EDUCATION</H2>
+<H3>HIGH &nbspSCHOOL</H3>
+<B><P1>Safa Inter Collage Badula Dumaryaganj</p1></B>
+<p>2018*siddtharth nager UP</p>
+<p>PERCENTAGE:69</P1>
+<H2>INTERMEDIATE</H2>
+<p>Khair Tecnical Inter CollageBangawa Domaryaganj</p>
+<p>2020*siddharthnager UP</p>
+<p>PERCENTAGE:64</p>
+<H1>ITI (COPA)</H1>
+<p>Khair Tecnical Center Private ITI (1626)</p>
+<p>Bangawa Domaryaganj</p>
+<p>2022*Siddtharth nager</p>
+<h1>LANGUAGES</H1>
+<h3><p>Hindi:Native</p>
+English:Native</h3>
+
+
+
+
+
+
+
+
+   <hr>
+
+<center><H3>YOUTUBE : <a href="https://www.youtube.com/watch?v=sizk0E9Yc_M"> GO TO YOUTUBE WEBSITE</a></center>
+<center><H3>FACEBOOK : <a href="https://www.facebook.com/login/"> GO TO FACEBOOK WEBSITE</a></center>
+ <hr></hr>
+
+<center><H2><P>POLLUTION &nbsp(प्रदूषण)
+</P></H2></center>
+
+<center><h1 style="color:MediumSeaGreen;"<p>प्रदूषण के प्रकार </h1></center>   
+<center><img src="C:\Users\dell\Desktop\first web\download.jpg"width="750"high"1080"C:\Users\dell\Pictures </center>
+<center><H2>POLLUTION IN THE WORLD</H2></center>
+</center> 
+<h2 style="color:RED;"<p>1.वायु प्रदूषण</h2>                     							
+<h2 style="color:RED;"<p>2.जल प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>3.भूमि प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>4.ध्वनि प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>5.प्रकाश प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>6.रेडियोएक्टिव प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>7.थर्मल प्रदूषण</h2> 
+
+<h2 style="color:RED;"<p>8.दृश्य प्रदूष</h2> 
+
+<center><h2 style="color:red;">वायु प्रदूषण</h2></center>
+<p> वायु प्रदूषण को सबसे खतरनाक प्रदूषण माना जाता है, इस प्रदूषण का मुख्य कारण उद्योगों और वाहनों से निकलने वाला धुआं है। इन स्त्रोतों से निकलने वाला हानिकारक धुआं लोगो के लिए सांस लेने में भी बाधा उत्पन्न कर देता है। दिन प्रतिदिन बढ़ते उद्योगों और वाहनों ने वायु प्रदूषण में काफी वृद्धि कर दी है। जिसने ब्रोंकाइटिस और फेफड़ो से संबंधित कई तरह की स्वास्थ्य समस्याएं खड़ी कर दी है।</p>
+<center><h2 style="color:red;">जल प्रदूषण</h2></center>
+<p>उद्योगों और घरों से निकला हुआ कचरा कई बार नदियों और दूसरे जल स्त्रोतों में मिल जाता है, जिससे यह उन्हें प्रदूषित कर देता है। एक समय साफ-सुथरी और पवित्र माने जानी वाली हमारी यह नदियां आज कई तरह के बीमारियों का घर बन गई है क्योंकि इनमें भारी मात्रा में प्लास्टिक पदार्थ, रासयनिक कचरा और दूसरे कई प्रकार के नान बायोडिग्रेडबल कचरे मिल गये है।</p>
+<center><h2 style="color:red;">भूमि प्रदूषण</h2></center>
+<p>वह औद्योगिक और घरेलू कचरा जिसका पानी में निस्तारण नही होता है, वह जमीन पर ही फैला रहता है। हालांकि इसके रीसायकल तथा पुनरुपयोग के कई प्रयास किये जाते है पर इसमें कोई खास सफलता प्राप्त नही होती है। इस तरह के भूमि प्रदूषण के कारण इसमें मच्छर, मख्खियां और दूसरे कीड़े पनपने लगते है, जोकि मनुष्यों तथा दूसरे जीवों में कई तरह के बीमारियों का कारण बनते है।</p>
+<center><h2 style="color:red;">ध्वनि प्रदूषण</h2></center>
+<p>ध्वनि प्रदूषण कारखनों में चलने वाली तेज आवाज वाली मशीनों तथा दूसरे तेज आवाज करने वाली यंत्रो से उत्पन्न होता है। इसके साथ ही यह सड़क पर चलने वाले वाहन, पटाखे फूटने के कारण उत्पन्न होने वाला आवाज, लाउड स्पीकर से भी ध्वनि प्रदूषण में वृद्धि होती है। ध्वनि प्रदूषण मनुष्यों में होने वाले मानसिक तनाव का मुख्य कारण है, जोकि मस्तिष्क पर कई दुष्प्रभाव डालने के साथ ही सुनने की शक्ति को भी घटाता है।</p>
+<center><h2 style="color:red;">प्रकाश प्रदूषण</h2></center>
+</p>प्रकाश प्रदूषण किसी क्षेत्र में अत्यधिक और जरुरत से ज्यादे रोशनी उत्पन्न करने के कारण पैदा होता है। प्रकाश प्रदूषण शहरी क्षेत्रों में प्रकाश के वस्तुओं के अत्यधिक उपयोग से पैदा होता है। बिना जरुरत के अत्याधिक प्रकाश पैदा करने वाली वस्तुएं प्रकाश प्रदूषण को बढ़ा देती है, जिससे कई तरह की समस्याएं उत्पन्न हो जाती है।</p>
+<center><h2 style="color:red;">रेडियोएक्टिव प्रदूषण</h2></center>
+<p>रेडियोएक्टिव प्रदूषण का तात्पर्य उस प्रदूषण से है, जो अनचाहे रेडियोएक्टिव तत्वों द्वारा वायुमंडल में उत्पन्न होता है। रेडियोएक्टिव प्रदूषण हथियारों के फटने तथा परीक्षण, खनन आदि से उत्पन्न होता है। इसके साथ ही परमाणु बिजली केंद्रों में भी कचरे के रुप में उत्पन्न होने वाले अवयव भी रेडियोएक्टिव प्रदूषण को बढ़ाते है।</p>
+<center><h2 style="color:red;">थर्मल प्रदूषण</h2></center>
+<p>कई उद्योगों में पानी का इस्तेमाल शीतलक के रुप में किया जाता है जोकि थर्मल प्रदूषण का मुख्य कारण है। इसके कारण जलीय जीवों को तापमान परिवर्तन और पानी में आक्सीजन की कमी जैसी समस्याओं से जूझना पड़ता है।</p>
+<center><h2 style="color:red;">दृश्य प्रदूषण</h2></center>
+<p>मनुष्य द्वारा बनायी गयी वह वस्तुएं जो हमारी दृष्टि को प्रभावित करती है दृष्य प्रदूषण के अंतर्गत आती है जैसे कि बिल बोर्ड, अंटिना, कचरे के डिब्बे, इलेक्ट्रिक पोल, टावर्स, तार, वाहन, बहुमंजिला इमारते आदि।</p>
+<center><h2 style="color:red;">विश्व के सर्वाधिक प्रदूषण वाले शहर</h2></center>
+</p>एक तरफ जहां विश्व के कई शहरों ने प्रदूषण के स्तर को कम करने में सफलता प्राप्त कर ली है, वही कुछ शहरों में यह स्तर काफी तेजी से बढ़ता जा रहा है। विश्व के सबसे अधिक प्रदूषण वाले शहरों की सूची में कानपुर, दिल्ली, वाराणसी, पटना, पेशावर, कराची, सिजीज़हुआन्ग, हेजे, चेर्नोबिल, बेमेन्डा, बीजिंग और मास्को जैसे शहर शामिल है। इन शहरों में वायु की गुणवत्ता का स्तर काफी खराब है और इसके साथ ही इन शहरों में जल और भूमि प्रदूषण की समस्या भी दिन-प्रतिदिन बढ़ती जा रही है, जिससे इन शहरों में जीवन स्तर काफी दयनीय हो गया है। यह वह समय है जब लोगों को शहरों का विकास करने के साथ ही प्रदूषण स्तर को भी नियंत्रित करने की आवश्यकता है।</p>
+<center><h2 style="color:red;">प्रदूषण के कारण  – Reason For Pollution</h2></center>
+<p>1.बेकार पदार्थो की बढ़ती मात्रा और उचित  निपटान  के विकल्पों की कमी के कारण समस्या दिन प्रति  दिन बढ़ती जा रही है। कारखानों और घरों से बेकार उत्पादों को खुले स्थानों में रखा  और जलया  जाता है</p>
+<p>2.जिससे  भूमि, वायु , जल , ध्वनि  प्रदूषित होते हैं| प्रदूषण विभिन्न मानवीय गतिविधियों के कारण और प्राकृतिक कारणों के कारण भी होता है।</p> 
+<p>3.कीटनाशकों का  बढ़ता उपयोग, औद्योगिक और कृषि  के बेकार पदार्थो के निपटान के लिए विकल्पों की कमी, वनों की कटाई, बढ़ते शहरी करण, अम्लीय वर्षा और खनन इस प्रदूषण के मूल कारक  हैं।</p> 
+<p>4.ये सभी कारक कृषि गतिविधियों में बाधा डालते हैं और जानवरों और मनुष्यों में विभिन्न बीमारियों का कारण भी  बनते हैं। जनसंख्या वृद्धि भी   कारण है बढ़ते हुए प्रदूषण’ का |</p> 
+<center><h2 style="color:red;">प्रदूषण के स्त्रोत – Sources of Pollution</h2></center>
+
+<center><h3 style="color:MediumSeaGreen;"<p>प्रदूषण के स्त्रोतों को  निम्न  श्रेणियों  में बाँटा जा सकता है  :</p></h3></center> 
+<p>1.घरेलू बेकार पदार्थ,जमा  हुआ  पानी,कूलरो  मे पड|  पानी , पौधो मे जम|  पानी</p>
+<p>2. रासायनिक पदार्थ जैसे – डिटर्जेंट्स, हाइड्रोजन, साबुन, औद्योगिक एवं खनन के बेकार पदार्थ</p>
+<p>3. प्लास्टिकv
+<p>4. गैसें जैसे- कार्बन मोनोऑक्साइड, सल्फर डाइऑक्साइड, अमोनिया आदि।</p>
+<p>5. उर्वरक जैसे- यूरिया, पोटाश ।</p>
+<p>6.  गंदा पानी</p>
+<p>7. पेस्टीसाइड्स जैसे- डी.डी.टी, कीटनाशी।</p>
+<p>8. ध्वनि।
+<p>9. ऊष्मा।</p>
+<p>10. जनसंख्या वृद्धि</p>
+
+<center><img src="C:\Users\dell\Desktop\first web\sddefault.jpg"width="750"high"1080"C:\Users\dell\Pictures </center>
+
+
+
+
 </body>
 
-</html>
+
+
+</html>  
